Add data access layer, following Clean Architecture model

--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "ethereum"
   ],
   "author": "fbslo & ederaleng & ochukochris",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "mongodb": "^3.6.3"
+  }
 }
