--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "fbslo & ederaleng & ochukochris",
   "license": "ISC",
   "dependencies": {
+    "@splinterlands/hive-interface": "^2.1.3",
     "dotenv": "^8.2.0",
     "mongodb": "^3.6.3"
   }
