--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Wrapped Hive Validator",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node ./src/index.js"
   },
   "keywords": [
@@ -18,5 +18,8 @@
     "@splinterlands/hive-interface": "^2.1.3",
     "dotenv": "^8.2.0",
     "mongodb": "^3.6.3"
+  },
+  "devDependencies": {
+    "mocha": "^8.2.1"
   }
 }
