--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "@splinterlands/hive-interface": "^2.1.3",
     "dotenv": "^8.2.0",
-    "mongodb": "^3.6.3"
+    "mongodb": "^3.6.3",
+    "socket.io": "^3.0.4",
+    "socket.io-client": "^3.0.4"
   },
   "devDependencies": {
     "mocha": "^8.2.1"
