--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^8.2.0",
     "mongodb": "^3.6.3",
     "socket.io": "^3.0.4",
-    "socket.io-client": "^3.0.4"
+    "socket.io-client": "^3.0.4",
+    "web3": "^1.3.0"
   },
   "devDependencies": {
     "mocha": "^8.2.1"
