--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@splinterlands/hive-interface": "^2.1.3",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "mongodb": "^3.6.3",
     "socket.io": "^3.0.4",
     "socket.io-client": "^3.0.4",
