add updated signing

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@splinterlands/hive-interface": "^2.1.4",
     "dotenv": "^8.2.0",
+    "eth-sig-util": "^3.0.1",
     "ethereum-input-data-decoder": "^0.3.1",
     "mongodb": "^3.6.3",
     "socket.io": "^3.0.5",
